# RideOS

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
engine/: .coverage  README.md  pyproject.toml  scan.py
engine/data/: last_engine_diag.json  rideos.db  rideos.db-shm  rideos.db-wal
engine/engine/: __main__.py  main.py  physics_calibration.py
engine/engine/adapters/: __init__.py
engine/engine/application/: analytics_service.py  auto_shift.py  diagnostics.py  replay.py  ride_service.py  route_service.py  strava_service.py  wake_lock.py
engine/engine/ble/: client.py  reconnect.py  scanner.py
engine/engine/config/: logging.py
engine/engine/control/: athlete.py  controller.py  erg_debouncer.py  phases.py  state.py
engine/engine/domain/: __init__.py  erg.py  events.py  gears.py  physics.py  physics_validation.py  projection.py  route.py  tracker.py
engine/engine/ftms/: control_point.py  parsers.py
engine/engine/gears/: engine.py
engine/engine/input/: click.py  keyboard.py
engine/engine/ports/: __init__.py  clock.py  eventbus.py  repos.py  shifter.py  strava.py  trainer.py
engine/engine/route/: erg.py  ghost.py  library.py  loader.py  model.py  tracker.py
engine/engine/strava/: auth.py  client.py  importer.py
engine/engine/ws/: server.py
engine/routes/: Gravel-Fahrt_am_Abend_-_Rise_of_the_Phoe_92213377.gpx  Gravel-Fahrt_am_Morgen_165f626e.gpx  Gravel-Fahrt_am_Nachmittag_7bc10742.gpx  Gravel-Fahrt_zur_Mittagszeit_102119e6.gpx  Gravel-Fahrt_zur_Mittagszeit_e57b4b41.gpx  Route_02_05_2026_00_14_07c0057f.gpx  _Vinschgau__Tag_3__GVL__Stilfserjoch___V_6b7e2f90.gpx  library.json
engine/tests/: conftest.py
engine/tests/adapters/: test_asyncio_bus.py
engine/tests/application/: test_analytics_service.py  test_auto_shift.py  test_diagnostics.py  test_replay.py  test_ride_service.py  test_route_service.py  test_strava_service.py
engine/tests/ble/: test_client.py  test_reconnect.py  test_scanner.py
engine/tests/domain/: test_erg.py  (+8 more)
(+288 files in other folders)
