[project]
name = "rideos-engine"
version = "0.1.0"
description = "RideOS local engine: BLE bridge to Wahoo KICKR Core via FTMS"
requires-python = ">=3.12"
dependencies = [
    "bleak>=3.0.1,<4.0",
    "websockets>=16.0,<17.0",
    "gpxpy>=1.6.2,<2.0",
    "cryptography>=47.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
